# temoto_core

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
actions/ta_add_numbers/: CMakeLists.txt  descriptor.xml  package.xml
actions/ta_add_numbers/src/: ta_add_numbers.cpp
actions/ta_index_actions/: CMakeLists.txt  descriptor.xml  package.xml
actions/ta_index_actions/src/: ta_index_actions.cpp
actions/ta_open_terminal/: CMakeLists.txt  descriptor.xml  package.xml
actions/ta_open_terminal/src/: ta_open_terminal.cpp
actions/ta_stop_action/: CMakeLists.txt  descriptor.xml  package.xml
actions/ta_stop_action/src/: ta_stop_action.cpp
include/temoto_core/common/: request_container.h  temoto_log_macros.h  tools.h
include/temoto_core/rmp/: config_synchronizer.h  log_macros.h  resource_client.h  resource_manager_services.h  resource_server.h  server_query.h
msg/: RMPRequest.msg  RMPResponse.msg
src/temoto_error/: temoto_error.cpp
temoto_core/: CMakeLists.txt  README.md  package.xml
temoto_core/config/: action_dst.yaml  tracer_config.yaml
temoto_core/include/temoto_core/common/: base_subsystem.h  console_colors.h  reliability.h  ros_serialization.h  sft_serialization.h  temoto_id.h  temoto_log_macros.h  tools.h  topic_container.h  tracer_conversions.h
temoto_core/include/temoto_core/rmp/: base_resource_client.h  base_resource_server.h  client_query.h  config_synchronizer.h  resource_manager.h
temoto_core/include/temoto_core/temoto_error/: temoto_error.h
temoto_core/include/temoto_core/trr/: base_resource_client.h  base_resource_server.h  client_query.h  config_synchronizer.h  resource_client.h  resource_registrar.h  resource_registrar_services.h  resource_server.h  server_query.h
temoto_core/msg/: ConfigSync.msg  Error.msg  ErrorStack.msg  RMPRequest.msg  SemanticFrameTreeYaml.msg  SemanticFrameYaml.msg
temoto_core/src/common/: reliability.cpp  sft_serialization.cpp  tracer_conversions.cpp
temoto_core/src/examples/: tracing_app_1_test.cpp  tracing_app_2_test.cpp  tracing_app_3_test.cpp
temoto_core/srv/: ResourceStatus.srv  Tracing.srv  UnloadResource.srv
