<?xml version="1.0"?>
<package format="2">
  <name>temoto_core</name>
  <version>0.0.0</version>
  <description>The temoto_core package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

</package>
