<?xml version="1.0"?>
<package format="2">
  <name>temoto_core</name>
  <version>0.0.0</version>
  <description>The temoto_core package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>diagnostic_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
